Corrigiendo detalles en mobile

--- a/css/style.css
+++ b/css/style.css
@@ -61,16 +61,20 @@ body {
 
 
 /* Header */
+
 .header {
     grid-area: header;
     display: grid;
     grid-template-columns: 20% 1fr 15%;
     grid-gap: 20px;
     align-items: center;
-    margin: 0 20px;
-
+    margin: 0 5px;
 }
-
+@media screen and (min-width: 580px) {
+    .header {
+        margin: 0 20px;
+    }
+}
 .title {
   text-decoration: none;
   letter-spacing:-1px;
@@ -89,6 +93,11 @@ body {
 .container-busqueda {
     display: flex;
     justify-content: start;
+}
+@media screen and (max-width:340px) {
+    .input-busqueda {
+        margin: 0 auto;
+    }
 }
 .container-icons  {
     display: flex;
@@ -133,6 +142,7 @@ body {
     height: 32px;
     padding: 0 10px;
     line-height: 32px;
+
 }
 
 .toggle {
@@ -344,4 +354,10 @@ hr {
 .main-footer__text a{
     text-decoration: none;
     color: #FF0000;
+}
+
+@media screen and (max-width: 380px) {
+    .main-footer__text {
+        font-size: .8rem;
+    }
 }
